parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    DOUBLEQUOTES
    LBRACKET
    RBRACKET
    RETURN
    SINGLEQUOTES
    WHILE

Grammar

Rule 0     S' -> program
Rule 1     program -> statement
Rule 2     program -> program statement
Rule 3     declaration -> init_declarator PUNTOCOMA
Rule 4     declaration -> declarator ASSIGN function_call
Rule 5     init_declarator -> declarator
Rule 6     init_declarator -> declarator ASSIGN assignment_expression
Rule 7     declarator -> ID DOSPUNTOS type_specifier
Rule 8     declarator -> NUMERO ID DOSPUNTOS type_specifier
Rule 9     type_specifier -> INT
Rule 10    type_specifier -> FLOAT
Rule 11    type_specifier -> STRING
Rule 12    type_specifier -> BOOL
Rule 13    literal -> NUMERO
Rule 14    literal -> REAL
Rule 15    literal -> TEXT
Rule 16    literal -> TRUE
Rule 17    literal -> FALSE
Rule 18    primary_expression -> ID
Rule 19    primary_expression -> literal
Rule 20    primary_expression -> LPAREN assignment_expression RPAREN
Rule 21    additive_expression -> primary_expression
Rule 22    additive_expression -> additive_expression PLUS primary_expression
Rule 23    additive_expression -> additive_expression MINUS primary_expression
Rule 24    multiplicative_expression -> additive_expression
Rule 25    multiplicative_expression -> multiplicative_expression TIMES additive_expression
Rule 26    multiplicative_expression -> multiplicative_expression DIVIDE additive_expression
Rule 27    relational_expression -> multiplicative_expression
Rule 28    relational_expression -> relational_expression MENORQUE multiplicative_expression
Rule 29    relational_expression -> relational_expression MAYORQUE multiplicative_expression
Rule 30    relational_expression -> relational_expression MENORIGUAL multiplicative_expression
Rule 31    relational_expression -> relational_expression MAYORIGUAL multiplicative_expression
Rule 32    equality_expression -> relational_expression
Rule 33    equality_expression -> equality_expression IGUALIGUAL relational_expression
Rule 34    equality_expression -> equality_expression NOIGUAL relational_expression
Rule 35    and_expression -> equality_expression
Rule 36    and_expression -> and_expression AND equality_expression
Rule 37    or_expression -> and_expression
Rule 38    or_expression -> or_expression OR and_expression
Rule 39    assignment_expression -> or_expression
Rule 40    assignment_expression -> primary_expression ASSIGN multiplicative_expression
Rule 41    statement -> function_call
Rule 42    statement -> compound_statement
Rule 43    statement -> assignment_statement
Rule 44    statement -> function_definition
Rule 45    statement -> declaration
Rule 46    statement -> selection_statement
Rule 47    statement -> iteration_statement
Rule 48    statement_list -> statement
Rule 49    statement_list -> statement_list statement
Rule 50    compound_statement -> LPAREN RPAREN
Rule 51    compound_statement -> LPAREN statement_list RPAREN
Rule 52    assignment_statement -> assignment_expression PUNTOCOMA
Rule 53    assignment_statement -> primary_expression ASSIGN function_call
Rule 54    ID_list -> empty
Rule 55    ID_list -> ID DOSPUNTOS type_specifier
Rule 56    ID_list -> ID_list COMA ID DOSPUNTOS type_specifier
Rule 57    parameter_list -> empty
Rule 58    parameter_list -> assignment_expression
Rule 59    parameter_list -> parameter_list COMA assignment_expression
Rule 60    function_definition -> DEF ID LPAREN ID_list RPAREN compound_statement
Rule 61    function_call -> ID LPAREN parameter_list RPAREN PUNTOCOMA
Rule 62    selection_statement -> IF assignment_expression compound_statement
Rule 63    selection_statement -> IF assignment_expression compound_statement ELSE compound_statement
Rule 64    iteration_statement -> FOR LPAREN NUMERO RPAREN DOSPUNTOS
Rule 65    empty -> <empty>

Terminals, with rules where they appear

AND                  : 36
ASSIGN               : 4 6 40 53
BOOL                 : 12
COMA                 : 56 59
DEF                  : 60
DIVIDE               : 26
DOSPUNTOS            : 7 8 55 56 64
DOUBLEQUOTES         : 
ELSE                 : 63
FALSE                : 17
FLOAT                : 10
FOR                  : 64
ID                   : 7 8 18 55 56 60 61
IF                   : 62 63
IGUALIGUAL           : 33
INT                  : 9
LBRACKET             : 
LPAREN               : 20 50 51 60 61 64
MAYORIGUAL           : 31
MAYORQUE             : 29
MENORIGUAL           : 30
MENORQUE             : 28
MINUS                : 23
NOIGUAL              : 34
NUMERO               : 8 13 64
OR                   : 38
PLUS                 : 22
PUNTOCOMA            : 3 52 61
RBRACKET             : 
REAL                 : 14
RETURN               : 
RPAREN               : 20 50 51 60 61 64
SINGLEQUOTES         : 
STRING               : 11
TEXT                 : 15
TIMES                : 25
TRUE                 : 16
WHILE                : 
error                : 

Nonterminals, with rules where they appear

ID_list              : 56 60
additive_expression  : 22 23 24 25 26
and_expression       : 36 37 38
assignment_expression : 6 20 52 58 59 62 63
assignment_statement : 43
compound_statement   : 42 60 62 63 63
declaration          : 45
declarator           : 4 5 6
empty                : 54 57
equality_expression  : 33 34 35 36
function_call        : 4 41 53
function_definition  : 44
init_declarator      : 3
iteration_statement  : 47
literal              : 19
multiplicative_expression : 25 26 27 28 29 30 31 40
or_expression        : 38 39
parameter_list       : 59 61
primary_expression   : 21 22 23 40 53
program              : 2 0
relational_expression : 28 29 30 31 32 33 34
selection_statement  : 46
statement            : 1 2 48 49
statement_list       : 49 51
type_specifier       : 7 8 55 56

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statement
    (2) program -> . program statement
    (41) statement -> . function_call
    (42) statement -> . compound_statement
    (43) statement -> . assignment_statement
    (44) statement -> . function_definition
    (45) statement -> . declaration
    (46) statement -> . selection_statement
    (47) statement -> . iteration_statement
    (61) function_call -> . ID LPAREN parameter_list RPAREN PUNTOCOMA
    (50) compound_statement -> . LPAREN RPAREN
    (51) compound_statement -> . LPAREN statement_list RPAREN
    (52) assignment_statement -> . assignment_expression PUNTOCOMA
    (53) assignment_statement -> . primary_expression ASSIGN function_call
    (60) function_definition -> . DEF ID LPAREN ID_list RPAREN compound_statement
    (3) declaration -> . init_declarator PUNTOCOMA
    (4) declaration -> . declarator ASSIGN function_call
    (62) selection_statement -> . IF assignment_expression compound_statement
    (63) selection_statement -> . IF assignment_expression compound_statement ELSE compound_statement
    (64) iteration_statement -> . FOR LPAREN NUMERO RPAREN DOSPUNTOS
    (39) assignment_expression -> . or_expression
    (40) assignment_expression -> . primary_expression ASSIGN multiplicative_expression
    (18) primary_expression -> . ID
    (19) primary_expression -> . literal
    (20) primary_expression -> . LPAREN assignment_expression RPAREN
    (5) init_declarator -> . declarator
    (6) init_declarator -> . declarator ASSIGN assignment_expression
    (7) declarator -> . ID DOSPUNTOS type_specifier
    (8) declarator -> . NUMERO ID DOSPUNTOS type_specifier
    (37) or_expression -> . and_expression
    (38) or_expression -> . or_expression OR and_expression
    (13) literal -> . NUMERO
    (14) literal -> . REAL
    (15) literal -> . TEXT
    (16) literal -> . TRUE
    (17) literal -> . FALSE
    (35) and_expression -> . equality_expression
    (36) and_expression -> . and_expression AND equality_expression
    (32) equality_expression -> . relational_expression
    (33) equality_expression -> . equality_expression IGUALIGUAL relational_expression
    (34) equality_expression -> . equality_expression NOIGUAL relational_expression
    (27) relational_expression -> . multiplicative_expression
    (28) relational_expression -> . relational_expression MENORQUE multiplicative_expression
    (29) relational_expression -> . relational_expression MAYORQUE multiplicative_expression
    (30) relational_expression -> . relational_expression MENORIGUAL multiplicative_expression
    (31) relational_expression -> . relational_expression MAYORIGUAL multiplicative_expression
    (24) multiplicative_expression -> . additive_expression
    (25) multiplicative_expression -> . multiplicative_expression TIMES additive_expression
    (26) multiplicative_expression -> . multiplicative_expression DIVIDE additive_expression
    (21) additive_expression -> . primary_expression
    (22) additive_expression -> . additive_expression PLUS primary_expression
    (23) additive_expression -> . additive_expression MINUS primary_expression

    ID              shift and go to state 10
    LPAREN          shift and go to state 11
    DEF             shift and go to state 14
    IF              shift and go to state 17
    FOR             shift and go to state 18
    NUMERO          shift and go to state 19
    REAL            shift and go to state 24
    TEXT            shift and go to state 25
    TRUE            shift and go to state 26
    FALSE           shift and go to state 27

    program                        shift and go to state 1
    statement                      shift and go to state 2
    function_call                  shift and go to state 3
    compound_statement             shift and go to state 4
    assignment_statement           shift and go to state 5
    function_definition            shift and go to state 6
    declaration                    shift and go to state 7
    selection_statement            shift and go to state 8
    iteration_statement            shift and go to state 9
    assignment_expression          shift and go to state 12
    primary_expression             shift and go to state 13
    init_declarator                shift and go to state 15
    declarator                     shift and go to state 16
    or_expression                  shift and go to state 20
    multiplicative_expression      shift and go to state 21
    literal                        shift and go to state 22
    and_expression                 shift and go to state 23
    equality_expression            shift and go to state 28
    relational_expression          shift and go to state 29
    additive_expression            shift and go to state 30

state 1

    (0) S' -> program .
    (2) program -> program . statement
    (41) statement -> . function_call
    (42) statement -> . compound_statement
    (43) statement -> . assignment_statement
    (44) statement -> . function_definition
    (45) statement -> . declaration
    (46) statement -> . selection_statement
    (47) statement -> . iteration_statement
    (61) function_call -> . ID LPAREN parameter_list RPAREN PUNTOCOMA
    (50) compound_statement -> . LPAREN RPAREN
    (51) compound_statement -> . LPAREN statement_list RPAREN
    (52) assignment_statement -> . assignment_expression PUNTOCOMA
    (53) assignment_statement -> . primary_expression ASSIGN function_call
    (60) function_definition -> . DEF ID LPAREN ID_list RPAREN compound_statement
    (3) declaration -> . init_declarator PUNTOCOMA
    (4) declaration -> . declarator ASSIGN function_call
    (62) selection_statement -> . IF assignment_expression compound_statement
    (63) selection_statement -> . IF assignment_expression compound_statement ELSE compound_statement
    (64) iteration_statement -> . FOR LPAREN NUMERO RPAREN DOSPUNTOS
    (39) assignment_expression -> . or_expression
    (40) assignment_expression -> . primary_expression ASSIGN multiplicative_expression
    (18) primary_expression -> . ID
    (19) primary_expression -> . literal
    (20) primary_expression -> . LPAREN assignment_expression RPAREN
    (5) init_declarator -> . declarator
    (6) init_declarator -> . declarator ASSIGN assignment_expression
    (7) declarator -> . ID DOSPUNTOS type_specifier
    (8) declarator -> . NUMERO ID DOSPUNTOS type_specifier
    (37) or_expression -> . and_expression
    (38) or_expression -> . or_expression OR and_expression
    (13) literal -> . NUMERO
    (14) literal -> . REAL
    (15) literal -> . TEXT
    (16) literal -> . TRUE
    (17) literal -> . FALSE
    (35) and_expression -> . equality_expression
    (36) and_expression -> . and_expression AND equality_expression
    (32) equality_expression -> . relational_expression
    (33) equality_expression -> . equality_expression IGUALIGUAL relational_expression
    (34) equality_expression -> . equality_expression NOIGUAL relational_expression
    (27) relational_expression -> . multiplicative_expression
    (28) relational_expression -> . relational_expression MENORQUE multiplicative_expression
    (29) relational_expression -> . relational_expression MAYORQUE multiplicative_expression
    (30) relational_expression -> . relational_expression MENORIGUAL multiplicative_expression
    (31) relational_expression -> . relational_expression MAYORIGUAL multiplicative_expression
    (24) multiplicative_expression -> . additive_expression
    (25) multiplicative_expression -> . multiplicative_expression TIMES additive_expression
    (26) multiplicative_expression -> . multiplicative_expression DIVIDE additive_expression
    (21) additive_expression -> . primary_expression
    (22) additive_expression -> . additive_expression PLUS primary_expression
    (23) additive_expression -> . additive_expression MINUS primary_expression

    ID              shift and go to state 10
    LPAREN          shift and go to state 11
    DEF             shift and go to state 14
    IF              shift and go to state 17
    FOR             shift and go to state 18
    NUMERO          shift and go to state 19
    REAL            shift and go to state 24
    TEXT            shift and go to state 25
    TRUE            shift and go to state 26
    FALSE           shift and go to state 27

    statement                      shift and go to state 31
    function_call                  shift and go to state 3
    compound_statement             shift and go to state 4
    assignment_statement           shift and go to state 5
    function_definition            shift and go to state 6
    declaration                    shift and go to state 7
    selection_statement            shift and go to state 8
    iteration_statement            shift and go to state 9
    assignment_expression          shift and go to state 12
    primary_expression             shift and go to state 13
    init_declarator                shift and go to state 15
    declarator                     shift and go to state 16
    or_expression                  shift and go to state 20
    multiplicative_expression      shift and go to state 21
    literal                        shift and go to state 22
    and_expression                 shift and go to state 23
    equality_expression            shift and go to state 28
    relational_expression          shift and go to state 29
    additive_expression            shift and go to state 30

state 2

    (1) program -> statement .

    ID              reduce using rule 1 (program -> statement .)
    LPAREN          reduce using rule 1 (program -> statement .)
    DEF             reduce using rule 1 (program -> statement .)
    IF              reduce using rule 1 (program -> statement .)
    FOR             reduce using rule 1 (program -> statement .)
    NUMERO          reduce using rule 1 (program -> statement .)
    REAL            reduce using rule 1 (program -> statement .)
    TEXT            reduce using rule 1 (program -> statement .)
    TRUE            reduce using rule 1 (program -> statement .)
    FALSE           reduce using rule 1 (program -> statement .)
    $end            reduce using rule 1 (program -> statement .)


state 3

    (41) statement -> function_call .

    ID              reduce using rule 41 (statement -> function_call .)
    LPAREN          reduce using rule 41 (statement -> function_call .)
    DEF             reduce using rule 41 (statement -> function_call .)
    IF              reduce using rule 41 (statement -> function_call .)
    FOR             reduce using rule 41 (statement -> function_call .)
    NUMERO          reduce using rule 41 (statement -> function_call .)
    REAL            reduce using rule 41 (statement -> function_call .)
    TEXT            reduce using rule 41 (statement -> function_call .)
    TRUE            reduce using rule 41 (statement -> function_call .)
    FALSE           reduce using rule 41 (statement -> function_call .)
    $end            reduce using rule 41 (statement -> function_call .)
    RPAREN          reduce using rule 41 (statement -> function_call .)


state 4

    (42) statement -> compound_statement .

    ID              reduce using rule 42 (statement -> compound_statement .)
    LPAREN          reduce using rule 42 (statement -> compound_statement .)
    DEF             reduce using rule 42 (statement -> compound_statement .)
    IF              reduce using rule 42 (statement -> compound_statement .)
    FOR             reduce using rule 42 (statement -> compound_statement .)
    NUMERO          reduce using rule 42 (statement -> compound_statement .)
    REAL            reduce using rule 42 (statement -> compound_statement .)
    TEXT            reduce using rule 42 (statement -> compound_statement .)
    TRUE            reduce using rule 42 (statement -> compound_statement .)
    FALSE           reduce using rule 42 (statement -> compound_statement .)
    $end            reduce using rule 42 (statement -> compound_statement .)
    RPAREN          reduce using rule 42 (statement -> compound_statement .)


state 5

    (43) statement -> assignment_statement .

    ID              reduce using rule 43 (statement -> assignment_statement .)
    LPAREN          reduce using rule 43 (statement -> assignment_statement .)
    DEF             reduce using rule 43 (statement -> assignment_statement .)
    IF              reduce using rule 43 (statement -> assignment_statement .)
    FOR             reduce using rule 43 (statement -> assignment_statement .)
    NUMERO          reduce using rule 43 (statement -> assignment_statement .)
    REAL            reduce using rule 43 (statement -> assignment_statement .)
    TEXT            reduce using rule 43 (statement -> assignment_statement .)
    TRUE            reduce using rule 43 (statement -> assignment_statement .)
    FALSE           reduce using rule 43 (statement -> assignment_statement .)
    $end            reduce using rule 43 (statement -> assignment_statement .)
    RPAREN          reduce using rule 43 (statement -> assignment_statement .)


state 6

    (44) statement -> function_definition .

    ID              reduce using rule 44 (statement -> function_definition .)
    LPAREN          reduce using rule 44 (statement -> function_definition .)
    DEF             reduce using rule 44 (statement -> function_definition .)
    IF              reduce using rule 44 (statement -> function_definition .)
    FOR             reduce using rule 44 (statement -> function_definition .)
    NUMERO          reduce using rule 44 (statement -> function_definition .)
    REAL            reduce using rule 44 (statement -> function_definition .)
    TEXT            reduce using rule 44 (statement -> function_definition .)
    TRUE            reduce using rule 44 (statement -> function_definition .)
    FALSE           reduce using rule 44 (statement -> function_definition .)
    $end            reduce using rule 44 (statement -> function_definition .)
    RPAREN          reduce using rule 44 (statement -> function_definition .)


state 7

    (45) statement -> declaration .

    ID              reduce using rule 45 (statement -> declaration .)
    LPAREN          reduce using rule 45 (statement -> declaration .)
    DEF             reduce using rule 45 (statement -> declaration .)
    IF              reduce using rule 45 (statement -> declaration .)
    FOR             reduce using rule 45 (statement -> declaration .)
    NUMERO          reduce using rule 45 (statement -> declaration .)
    REAL            reduce using rule 45 (statement -> declaration .)
    TEXT            reduce using rule 45 (statement -> declaration .)
    TRUE            reduce using rule 45 (statement -> declaration .)
    FALSE           reduce using rule 45 (statement -> declaration .)
    $end            reduce using rule 45 (statement -> declaration .)
    RPAREN          reduce using rule 45 (statement -> declaration .)


state 8

    (46) statement -> selection_statement .

    ID              reduce using rule 46 (statement -> selection_statement .)
    LPAREN          reduce using rule 46 (statement -> selection_statement .)
    DEF             reduce using rule 46 (statement -> selection_statement .)
    IF              reduce using rule 46 (statement -> selection_statement .)
    FOR             reduce using rule 46 (statement -> selection_statement .)
    NUMERO          reduce using rule 46 (statement -> selection_statement .)
    REAL            reduce using rule 46 (statement -> selection_statement .)
    TEXT            reduce using rule 46 (statement -> selection_statement .)
    TRUE            reduce using rule 46 (statement -> selection_statement .)
    FALSE           reduce using rule 46 (statement -> selection_statement .)
    $end            reduce using rule 46 (statement -> selection_statement .)
    RPAREN          reduce using rule 46 (statement -> selection_statement .)


state 9

    (47) statement -> iteration_statement .

    ID              reduce using rule 47 (statement -> iteration_statement .)
    LPAREN          reduce using rule 47 (statement -> iteration_statement .)
    DEF             reduce using rule 47 (statement -> iteration_statement .)
    IF              reduce using rule 47 (statement -> iteration_statement .)
    FOR             reduce using rule 47 (statement -> iteration_statement .)
    NUMERO          reduce using rule 47 (statement -> iteration_statement .)
    REAL            reduce using rule 47 (statement -> iteration_statement .)
    TEXT            reduce using rule 47 (statement -> iteration_statement .)
    TRUE            reduce using rule 47 (statement -> iteration_statement .)
    FALSE           reduce using rule 47 (statement -> iteration_statement .)
    $end            reduce using rule 47 (statement -> iteration_statement .)
    RPAREN          reduce using rule 47 (statement -> iteration_statement .)


state 10

    (61) function_call -> ID . LPAREN parameter_list RPAREN PUNTOCOMA
    (18) primary_expression -> ID .
    (7) declarator -> ID . DOSPUNTOS type_specifier

    LPAREN          shift and go to state 32
    ASSIGN          reduce using rule 18 (primary_expression -> ID .)
    PLUS            reduce using rule 18 (primary_expression -> ID .)
    MINUS           reduce using rule 18 (primary_expression -> ID .)
    TIMES           reduce using rule 18 (primary_expression -> ID .)
    DIVIDE          reduce using rule 18 (primary_expression -> ID .)
    MENORQUE        reduce using rule 18 (primary_expression -> ID .)
    MAYORQUE        reduce using rule 18 (primary_expression -> ID .)
    MENORIGUAL      reduce using rule 18 (primary_expression -> ID .)
    MAYORIGUAL      reduce using rule 18 (primary_expression -> ID .)
    IGUALIGUAL      reduce using rule 18 (primary_expression -> ID .)
    NOIGUAL         reduce using rule 18 (primary_expression -> ID .)
    AND             reduce using rule 18 (primary_expression -> ID .)
    OR              reduce using rule 18 (primary_expression -> ID .)
    PUNTOCOMA       reduce using rule 18 (primary_expression -> ID .)
    DOSPUNTOS       shift and go to state 33


state 11

    (50) compound_statement -> LPAREN . RPAREN
    (51) compound_statement -> LPAREN . statement_list RPAREN
    (20) primary_expression -> LPAREN . assignment_expression RPAREN
    (48) statement_list -> . statement
    (49) statement_list -> . statement_list statement
    (39) assignment_expression -> . or_expression
    (40) assignment_expression -> . primary_expression ASSIGN multiplicative_expression
    (41) statement -> . function_call
    (42) statement -> . compound_statement
    (43) statement -> . assignment_statement
    (44) statement -> . function_definition
    (45) statement -> . declaration
    (46) statement -> . selection_statement
    (47) statement -> . iteration_statement
    (37) or_expression -> . and_expression
    (38) or_expression -> . or_expression OR and_expression
    (18) primary_expression -> . ID
    (19) primary_expression -> . literal
    (20) primary_expression -> . LPAREN assignment_expression RPAREN
    (61) function_call -> . ID LPAREN parameter_list RPAREN PUNTOCOMA
    (50) compound_statement -> . LPAREN RPAREN
    (51) compound_statement -> . LPAREN statement_list RPAREN
    (52) assignment_statement -> . assignment_expression PUNTOCOMA
    (53) assignment_statement -> . primary_expression ASSIGN function_call
    (60) function_definition -> . DEF ID LPAREN ID_list RPAREN compound_statement
    (3) declaration -> . init_declarator PUNTOCOMA
    (4) declaration -> . declarator ASSIGN function_call
    (62) selection_statement -> . IF assignment_expression compound_statement
    (63) selection_statement -> . IF assignment_expression compound_statement ELSE compound_statement
    (64) iteration_statement -> . FOR LPAREN NUMERO RPAREN DOSPUNTOS
    (35) and_expression -> . equality_expression
    (36) and_expression -> . and_expression AND equality_expression
    (13) literal -> . NUMERO
    (14) literal -> . REAL
    (15) literal -> . TEXT
    (16) literal -> . TRUE
    (17) literal -> . FALSE
    (5) init_declarator -> . declarator
    (6) init_declarator -> . declarator ASSIGN assignment_expression
    (7) declarator -> . ID DOSPUNTOS type_specifier
    (8) declarator -> . NUMERO ID DOSPUNTOS type_specifier
    (32) equality_expression -> . relational_expression
    (33) equality_expression -> . equality_expression IGUALIGUAL relational_expression
    (34) equality_expression -> . equality_expression NOIGUAL relational_expression
    (27) relational_expression -> . multiplicative_expression
    (28) relational_expression -> . relational_expression MENORQUE multiplicative_expression
    (29) relational_expression -> . relational_expression MAYORQUE multiplicative_expression
    (30) relational_expression -> . relational_expression MENORIGUAL multiplicative_expression
    (31) relational_expression -> . relational_expression MAYORIGUAL multiplicative_expression
    (24) multiplicative_expression -> . additive_expression
    (25) multiplicative_expression -> . multiplicative_expression TIMES additive_expression
    (26) multiplicative_expression -> . multiplicative_expression DIVIDE additive_expression
    (21) additive_expression -> . primary_expression
    (22) additive_expression -> . additive_expression PLUS primary_expression
    (23) additive_expression -> . additive_expression MINUS primary_expression

    RPAREN          shift and go to state 35
    ID              shift and go to state 40
    LPAREN          shift and go to state 34
    DEF             shift and go to state 14
    IF              shift and go to state 17
    FOR             shift and go to state 18
    NUMERO          shift and go to state 41
    REAL            shift and go to state 24
    TEXT            shift and go to state 25
    TRUE            shift and go to state 26
    FALSE           shift and go to state 27

    statement_list                 shift and go to state 36
    assignment_expression          shift and go to state 37
    statement                      shift and go to state 38
    or_expression                  shift and go to state 20
    primary_expression             shift and go to state 39
    multiplicative_expression      shift and go to state 21
    function_call                  shift and go to state 3
    compound_statement             shift and go to state 4
    assignment_statement           shift and go to state 5
    function_definition            shift and go to state 6
    declaration                    shift and go to state 7
    selection_statement            shift and go to state 8
    iteration_statement            shift and go to state 9
    and_expression                 shift and go to state 23
    literal                        shift and go to state 22
    init_declarator                shift and go to state 15
    declarator                     shift and go to state 16
    equality_expression            shift and go to state 28
    relational_expression          shift and go to state 29
    additive_expression            shift and go to state 30

state 12

    (52) assignment_statement -> assignment_expression . PUNTOCOMA

    PUNTOCOMA       shift and go to state 42


state 13

    (53) assignment_statement -> primary_expression . ASSIGN function_call
    (40) assignment_expression -> primary_expression . ASSIGN multiplicative_expression
    (21) additive_expression -> primary_expression .

    ASSIGN          shift and go to state 43
    PLUS            reduce using rule 21 (additive_expression -> primary_expression .)
    MINUS           reduce using rule 21 (additive_expression -> primary_expression .)
    TIMES           reduce using rule 21 (additive_expression -> primary_expression .)
    DIVIDE          reduce using rule 21 (additive_expression -> primary_expression .)
    MENORQUE        reduce using rule 21 (additive_expression -> primary_expression .)
    MAYORQUE        reduce using rule 21 (additive_expression -> primary_expression .)
    MENORIGUAL      reduce using rule 21 (additive_expression -> primary_expression .)
    MAYORIGUAL      reduce using rule 21 (additive_expression -> primary_expression .)
    IGUALIGUAL      reduce using rule 21 (additive_expression -> primary_expression .)
    NOIGUAL         reduce using rule 21 (additive_expression -> primary_expression .)
    AND             reduce using rule 21 (additive_expression -> primary_expression .)
    OR              reduce using rule 21 (additive_expression -> primary_expression .)
    PUNTOCOMA       reduce using rule 21 (additive_expression -> primary_expression .)


state 14

    (60) function_definition -> DEF . ID LPAREN ID_list RPAREN compound_statement

    ID              shift and go to state 44


state 15

    (3) declaration -> init_declarator . PUNTOCOMA

    PUNTOCOMA       shift and go to state 45


state 16

    (4) declaration -> declarator . ASSIGN function_call
    (5) init_declarator -> declarator .
    (6) init_declarator -> declarator . ASSIGN assignment_expression

    ASSIGN          shift and go to state 46
    PUNTOCOMA       reduce using rule 5 (init_declarator -> declarator .)


state 17

    (62) selection_statement -> IF . assignment_expression compound_statement
    (63) selection_statement -> IF . assignment_expression compound_statement ELSE compound_statement
    (39) assignment_expression -> . or_expression
    (40) assignment_expression -> . primary_expression ASSIGN multiplicative_expression
    (37) or_expression -> . and_expression
    (38) or_expression -> . or_expression OR and_expression
    (18) primary_expression -> . ID
    (19) primary_expression -> . literal
    (20) primary_expression -> . LPAREN assignment_expression RPAREN
    (35) and_expression -> . equality_expression
    (36) and_expression -> . and_expression AND equality_expression
    (13) literal -> . NUMERO
    (14) literal -> . REAL
    (15) literal -> . TEXT
    (16) literal -> . TRUE
    (17) literal -> . FALSE
    (32) equality_expression -> . relational_expression
    (33) equality_expression -> . equality_expression IGUALIGUAL relational_expression
    (34) equality_expression -> . equality_expression NOIGUAL relational_expression
    (27) relational_expression -> . multiplicative_expression
    (28) relational_expression -> . relational_expression MENORQUE multiplicative_expression
    (29) relational_expression -> . relational_expression MAYORQUE multiplicative_expression
    (30) relational_expression -> . relational_expression MENORIGUAL multiplicative_expression
    (31) relational_expression -> . relational_expression MAYORIGUAL multiplicative_expression
    (24) multiplicative_expression -> . additive_expression
    (25) multiplicative_expression -> . multiplicative_expression TIMES additive_expression
    (26) multiplicative_expression -> . multiplicative_expression DIVIDE additive_expression
    (21) additive_expression -> . primary_expression
    (22) additive_expression -> . additive_expression PLUS primary_expression
    (23) additive_expression -> . additive_expression MINUS primary_expression

    ID              shift and go to state 49
    LPAREN          shift and go to state 50
    NUMERO          shift and go to state 51
    REAL            shift and go to state 24
    TEXT            shift and go to state 25
    TRUE            shift and go to state 26
    FALSE           shift and go to state 27

    assignment_expression          shift and go to state 47
    or_expression                  shift and go to state 20
    primary_expression             shift and go to state 48
    multiplicative_expression      shift and go to state 21
    and_expression                 shift and go to state 23
    literal                        shift and go to state 22
    equality_expression            shift and go to state 28
    relational_expression          shift and go to state 29
    additive_expression            shift and go to state 30

state 18

    (64) iteration_statement -> FOR . LPAREN NUMERO RPAREN DOSPUNTOS

    LPAREN          shift and go to state 52


state 19

    (8) declarator -> NUMERO . ID DOSPUNTOS type_specifier
    (13) literal -> NUMERO .

    ID              shift and go to state 53
    ASSIGN          reduce using rule 13 (literal -> NUMERO .)
    PLUS            reduce using rule 13 (literal -> NUMERO .)
    MINUS           reduce using rule 13 (literal -> NUMERO .)
    TIMES           reduce using rule 13 (literal -> NUMERO .)
    DIVIDE          reduce using rule 13 (literal -> NUMERO .)
    MENORQUE        reduce using rule 13 (literal -> NUMERO .)
    MAYORQUE        reduce using rule 13 (literal -> NUMERO .)
    MENORIGUAL      reduce using rule 13 (literal -> NUMERO .)
    MAYORIGUAL      reduce using rule 13 (literal -> NUMERO .)
    IGUALIGUAL      reduce using rule 13 (literal -> NUMERO .)
    NOIGUAL         reduce using rule 13 (literal -> NUMERO .)
    AND             reduce using rule 13 (literal -> NUMERO .)
    OR              reduce using rule 13 (literal -> NUMERO .)
    PUNTOCOMA       reduce using rule 13 (literal -> NUMERO .)


state 20

    (39) assignment_expression -> or_expression .
    (38) or_expression -> or_expression . OR and_expression

    PUNTOCOMA       reduce using rule 39 (assignment_expression -> or_expression .)
    RPAREN          reduce using rule 39 (assignment_expression -> or_expression .)
    LPAREN          reduce using rule 39 (assignment_expression -> or_expression .)
    COMA            reduce using rule 39 (assignment_expression -> or_expression .)
    OR              shift and go to state 54


state 21

    (27) relational_expression -> multiplicative_expression .
    (25) multiplicative_expression -> multiplicative_expression . TIMES additive_expression
    (26) multiplicative_expression -> multiplicative_expression . DIVIDE additive_expression

    MENORQUE        reduce using rule 27 (relational_expression -> multiplicative_expression .)
    MAYORQUE        reduce using rule 27 (relational_expression -> multiplicative_expression .)
    MENORIGUAL      reduce using rule 27 (relational_expression -> multiplicative_expression .)
    MAYORIGUAL      reduce using rule 27 (relational_expression -> multiplicative_expression .)
    IGUALIGUAL      reduce using rule 27 (relational_expression -> multiplicative_expression .)
    NOIGUAL         reduce using rule 27 (relational_expression -> multiplicative_expression .)
    AND             reduce using rule 27 (relational_expression -> multiplicative_expression .)
    OR              reduce using rule 27 (relational_expression -> multiplicative_expression .)
    PUNTOCOMA       reduce using rule 27 (relational_expression -> multiplicative_expression .)
    RPAREN          reduce using rule 27 (relational_expression -> multiplicative_expression .)
    LPAREN          reduce using rule 27 (relational_expression -> multiplicative_expression .)
    COMA            reduce using rule 27 (relational_expression -> multiplicative_expression .)
    TIMES           shift and go to state 55
    DIVIDE          shift and go to state 56


state 22

    (19) primary_expression -> literal .

    ASSIGN          reduce using rule 19 (primary_expression -> literal .)
    PLUS            reduce using rule 19 (primary_expression -> literal .)
    MINUS           reduce using rule 19 (primary_expression -> literal .)
    TIMES           reduce using rule 19 (primary_expression -> literal .)
    DIVIDE          reduce using rule 19 (primary_expression -> literal .)
    MENORQUE        reduce using rule 19 (primary_expression -> literal .)
    MAYORQUE        reduce using rule 19 (primary_expression -> literal .)
    MENORIGUAL      reduce using rule 19 (primary_expression -> literal .)
    MAYORIGUAL      reduce using rule 19 (primary_expression -> literal .)
    IGUALIGUAL      reduce using rule 19 (primary_expression -> literal .)
    NOIGUAL         reduce using rule 19 (primary_expression -> literal .)
    AND             reduce using rule 19 (primary_expression -> literal .)
    OR              reduce using rule 19 (primary_expression -> literal .)
    PUNTOCOMA       reduce using rule 19 (primary_expression -> literal .)
    RPAREN          reduce using rule 19 (primary_expression -> literal .)
    LPAREN          reduce using rule 19 (primary_expression -> literal .)
    COMA            reduce using rule 19 (primary_expression -> literal .)


state 23
